--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^3.0.1",
+    "typeorm": "^0.3.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
