--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^3.0.1",
     "typeorm": "^0.3.20",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.16.0"
   },
   "scripts": {
     "start": "SET PORT=3001 && react-scripts start",
