--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -10,7 +10,10 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "https": "^1.0.0",
     "mysql": "^2.18.1",
+    "pem": "^1.14.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
