--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@sentry/node": "^7.101.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chart.js": "^3.9.1",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "pem": "^1.14.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^3.0.1",
