--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@react-google-maps/api": "^2.19.3",
     "@sentry/node": "^7.101.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,8 @@
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "fetch-jsonp": "^1.3.0",
+    "google-maps-react": "^2.0.6",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "pem": "^1.14.8",
@@ -29,7 +32,7 @@
     "ws": "^8.16.0"
   },
   "scripts": {
-    "start": "SET PORT=3001 && react-scripts start",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && SET PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
