--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -19,6 +19,7 @@
     "fetch-jsonp": "^1.3.0",
     "google-maps-react": "^2.0.6",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "pem": "^1.14.8",
     "prop-types": "^15.8.1",
