--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@material-ui/core": "^4.12.4",
     "@react-google-maps/api": "^2.19.3",
     "@sentry/node": "^7.101.1",
@@ -21,12 +22,13 @@
     "chart.js": "^3.9.1",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "fetch-jsonp": "^1.3.0",
     "google-maps-react": "^2.0.6",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.12",
     "pem": "^1.14.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
