--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@material-ui/core": "^4.12.4",
     "@react-google-maps/api": "^2.19.3",
     "@sentry/node": "^7.101.1",
@@ -18,17 +21,20 @@
     "body-parser": "^1.20.2",
     "chart.js": "^3.9.1",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "emailjs-com": "^3.2.0",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
+    "fetch-jsonp": "^1.3.0",
     "google-maps-react": "^2.0.6",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.12",
     "pem": "^1.14.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^3.0.1",
     "typeorm": "^0.3.20",
@@ -36,7 +42,7 @@
     "ws": "^8.16.0"
   },
   "scripts": {
-    "start": "cross-env PORT=3001 react-scripts start",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && SET PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
