--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -11,8 +13,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.15.14",
+    "@mui/styles": "^5.15.14",
     "@react-google-maps/api": "^2.19.3",
     "@sentry/node": "^7.101.1",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,6 +43,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^3.0.1",
+    "stripe": "^14.23.0",
     "typeorm": "^0.3.20",
     "web-vitals": "^2.1.4",
     "ws": "^8.16.0"
