--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -33,6 +33,7 @@
     "google-maps-react": "^2.0.6",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
     "pem": "^1.14.8",
