--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.15.14",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
     "@mui/styles": "^5.15.14",
     "@react-google-maps/api": "^2.19.3",
     "@sentry/node": "^7.101.1",
