--- a/beehive-app/package.json
+++ b/beehive-app/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pem": "^1.14.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
